# chronovfd

./: .gitattributes  LICENSE  README.md  platformio.ini
.github/workflows/: compile.yml
aux/: i2c-clock.sh  set-current-rtc-date.sh  text.sh
firmware/: .gitignore  CMakeLists.txt  i2c-clock.sh  platformio.ini  requirements.txt  sdkconfig  sdkconfig.chronovfd
firmware/boards/: clockcore.json
firmware/old/: README.txt  fullon.ino  hvshift.cpp  hvshift.h  vfd.ino
firmware/src/: CMakeLists.txt  ambientlight.c  ambientlight.h  animations.c  animations.h  app_prov.c  app_prov.h  app_prov_handlers.c  ds1307.c  ds1307.h  hvshift.cpp  hvshift.h  i2cdev.c  i2cdev.h  main.c  realtimeclock.c  realtimeclock.h  segments.c  segments.cpp  segments.h  softap.c  vfd.ino  vfddriver.c  vfddriver.h  vfdtiny.ino  wireless.c  wireless.h
hardware/: _autosave-vfdchrono.kicad_pcb  bom.ini  clockcore-cache.lib  clockcore.kicad_pcb  clockcore.pro  clockcore.sch  clockcore_bom.csv  clockcore_digikey_bom.csv  clockcore_ibom.html  clockcore_ibom_r1.html  fp-info-cache  fp-lib-table  sym-lib-table  universal_vfd_psu.kicad_pcb  universal_vfd_psu.sch  universal_vfd_psu.sch-bak  vfdchrono-cache.lib  vfdchrono.kicad_pcb  vfdchrono.kicad_pcb-bak  vfdchrono.pro  vfdchrono.sch-bak  vfdchrono_noMcu_ratsnest.kicad_pcb  vfddriver.kicad_pcb  vfddriver.pro  vfddriver.sch  vfddriver_bom.csv  vfddriver_ibom.html
hardware/extra_libraries/: AHOI.kicad_mod  HV5812.dcm  HV5812.lib  IVL2-7_5.kicad_mod  IVL2-7_5.lib  ansemjo.dcm  (+9 more)
research/: filament_voltage.ods  hv_lm2733.ods  notes.md
src/: vfdtiny.ino
(+13 files in other folders)
